ola-parser/src/testdata/syntaxTests/functionTypes/payable_internal_function_type_is_not_fatal.sol
contract C {
    fn (uint) internal payable returns (uint) x;

    fn g() public {
        x = g;
    }
}
// ----
// TypeError 7415: (17-66): Only external fn types can be payable.
